--- a/style.css
+++ b/style.css
@@ -1,57 +1,57 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('./fonts/Poppins-Light.ttf') format('truetype');
+    font-weight: 300;
+}
+
+:root {
+    color:white;
+    background-color: white;
+    background: rgb(91,0,255);
+background: linear-gradient(45deg, rgba(91,0,255,1) 0%, rgba(255,0,179,1) 100%);
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: Poppins;
+    font-weight: 300;
 }
 
 body {
     display: flex;
     height: 100vh;
-    background-color: rgb(15, 15, 15);
-    color: white;
-}
-
-header i {
-    position: absolute;
-    left: 2.5rem;
-    top: 2.5rem;
-    font-size: 1.5rem;
-    color: white;
-    transition: 0.4s ease;
-}
-
-header i:hover {
-    scale: 1.2;
-    cursor: pointer;
+    width: 100vw;
 }
 
 .main-container {
+    width: 15rem;
     display: flex;
     flex-direction: column;
-    gap: 4rem;
+    gap: 2rem;
     text-align: center;
     margin: auto;
-    padding: 4rem 3rem 4rem 4rem;
+    padding: 2rem 1rem;
+    border: 1px solid black;
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 3rem;
-    background-color: rgba(15, 15, 15);
-    box-shadow: 0.8rem 0.8rem 0 white;
+    
 }
 
 .display {
-    padding: 1rem 2rem;
+    flex-grow: 1;
     font-size: 2rem;
-    max-width: 11.5rem;
-    border: 0;
+    padding: 0 1rem;
+    border: 1px solid black;
     border-radius: 3rem;
-    color: white;
-    background-color: rgba(15, 15, 15);
-    box-shadow: 0.8rem 0.8rem 0 white;
+    background-color: rgba(255, 255, 255, 0.25);
     outline: none;
 }
 
 .buttons-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
+    gap: 0.8rem;
     width: max-content;
     margin: auto;
 }
@@ -59,16 +59,18 @@ header i:hover {
 .button {
     width: 3rem;
     height: 3rem;
-    border: 0;
+    font-size: 1rem;
+    border: 1px solid black;
     border-radius: 1.5rem;
-    color: white;
-    background-color: rgb(15, 15, 15);
-    box-shadow: 0.4rem 0.4rem 0 white;
+    background-color: rgba(255, 255, 255, 0.25);
+    cursor: pointer;
 }
 
 .button:hover {
-    color: rgb(15, 15, 15);
-    background-color: white;
-    box-shadow: 0.4rem 0.4rem 0 rgb(15, 15, 15);
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
+.button:active {
     cursor: pointer;
+    box-shadow: 0.4rem 0.4rem 0 rgb(15, 15, 15);
 }
